<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mind Browser</string>
    <string name="address_hint">搜索或输入网址</string>
    <string name="cd_back">后退</string>
    <string name="cd_home">回到首页</string>
    <string name="cd_forward">前进</string>
    <string name="cd_tabs">标签页</string>
    <string name="cd_menu">菜单</string>
    <string name="cd_close_tab">关闭标签页</string>
    <string name="tabs_title">标签页</string>
    <string name="new_tab">＋ 新建标签页</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_new_tab">新建标签页</string>
    <string name="menu_desktop">桌面模式</string>
    <string name="menu_block_images">屏蔽图片（省流）</string>
    <string name="menu_share">分享此页面</string>
    <string name="menu_copy_link">复制链接</string>
    <string name="toast_link_copied">已复制链接</string>
    <string name="menu_bookmarks">书签</string>
    <string name="menu_bookmark_add">收藏本页</string>
    <string name="menu_bookmark_remove">取消收藏</string>
    <string name="toast_bookmark_added">已添加书签</string>
    <string name="toast_bookmark_removed">已取消收藏</string>
    <string name="toast_bookmark_unsupported">当前页面不能收藏</string>
    <string name="bookmarks_title">书签</string>
    <string name="bookmarks_empty">还没有书签，在菜单里点“收藏本页”添加</string>
    <string name="cd_delete_bookmark">删除书签</string>
</resources>
